# singularity

./: .bazelrc  .env.example  .gitignore  A_GRADE_PROPOSAL.md  BACKEND_DESIGN_PROPOSAL.md  CLAUDE.md  FRONTEND_UX_PROPOSAL.md  MODULE.bazel  Makefile  PRODUCTION_READINESS_ASSESSMENT.md  PROJECT_ASSESSMENT.md  README.md  WORKSPACE  pyproject.toml  singularity.db  transforms_v1.ipynb
aws/cloudformation/: lambda.yml  webapp-static-hosting.yaml
backend/: BUILD.bazel  app.py  app_test.py  catalog.py  conftest.py  locustfile.py  main.py  requirements.in
backend/api/: chat.py  deps.py
backend/api/routes/: chat.py  chat_test.py  conversations.py  conversations_test.py  health.py
backend/api/schemas/: chat.py  conversations.py
backend/core/: logging.py  metrics.py  models.py  settings.py
backend/db/: models.py  session.py
backend/inference/: __init__.py  chai_backend.py  chai_backend_test.py  echo.py  echo_test.py  factory.py  interface.py
backend/services/: chat.py  chat_test.py  conversation.py  voice.py  voice_test.py
backend/telemetry/: logging.py  metrics.py
backend/tests/: conftest.py
backend/tests/api/: test_chat.py  test_health.py
backend/tests/inference/: test_echo.py
backend/tests/services/: test_chat.py  test_voice.py
docs/: AGENTS.md  FRONTEND_UX_PROPOSAL.md
examples/go/greeter/client/: BUILD  client.go
examples/go/greeter/server/: BUILD  server.go
examples/go/httpserver/: BUILD  server.go
examples/go/models/: BUILD  models.go
examples/proto/: BUILD  greeter.proto
frontend/: BUILD.bazel  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.module.css  App.tsx  api.ts  index.css  main.tsx  types.ts
frontend/src/model/: conversationStorage.ts  useCharacterStore.ts  useChatModel.ts  useConversationStore.ts  useSpeech.ts
frontend/src/test/: api.test.ts  useChatModel.test.ts
frontend/src/view/: CharacterDetailModal.module.css  CharacterDetailModal.tsx  CharacterModal.module.css  CharacterModal.tsx  CharacterPicker.module.css  CharacterPicker.tsx  ChatWindow.module.css  ChatWindow.tsx  ErrorBoundary.tsx  InputBar.module.css  InputBar.tsx  MessageBubble.module.css  MessageBubble.tsx  Sidebar.module.css  Sidebar.tsx
go/: rules.bzl
go/base/: BUILD  app.go
go/client/: BUILD  client.go
go/server/: BUILD  server.go
huggingface/nlp/: demo.py
models/proto/: BUILD  neuron.proto
models/unit/: BUILD  neuron.go
proto/: BUILD  BUILD.bazel  chat.proto  singularity.proto
(+1 files in other folders)
