load("@rules_python//python:defs.bzl", "py_binary", "py_library")
load("@pip//:requirements.bzl", "requirement")

package(default_visibility = ["//visibility:public"])

py_binary(
    name = "server",
    srcs = ["main.py"],
    main = "main.py",
    deps = [
        ":inference",
        ":api",
        requirement("fastapi"),
        requirement("uvicorn"),
    ],
)

py_library(
    name = "inference",
    srcs = glob(["inference/*.py"]),
    deps = [
        requirement("pydantic"),
    ],
)

py_library(
    name = "api",
    srcs = glob(["api/*.py"]),
    deps = [
        ":inference",
        requirement("fastapi"),
        requirement("pydantic"),
    ],
)
