load("@rules_js//js:defs.bzl", "js_library")
load("@aspect_rules_ts//ts:defs.bzl", "ts_project")
load("@npm//:vite/package_json.bzl", vite_bin = "bin")

package(default_visibility = ["//visibility:public"])

ts_project(
    name = "frontend_ts",
    srcs = glob(["src/**/*.tsx", "src/**/*.ts"]),
    tsconfig = "tsconfig.json",
    deps = [
        "//:node_modules/react",
        "//:node_modules/react-dom",
        "//:node_modules/@types/react",
        "//:node_modules/@types/react-dom",
    ],
)

vite_bin.vite(
    name = "build",
    args = ["build"],
    chdir = package_name(),
    srcs = [
        "index.html",
        "vite.config.ts",
        ":frontend_ts",
    ],
    out_dirs = ["dist"],
)
